// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/http/tgit attempts to paginate 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.code.tencent.com",
      "private-token": "abc123",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://git.code.tencent.com/api/v3/some-url",
  },
]
`;

exports[`util/http/tgit paginates 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.code.tencent.com",
      "private-token": "abc123",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://git.code.tencent.com/api/v3/some-url",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.code.tencent.com",
      "private-token": "abc123",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://git.code.tencent.com/api/v3/some-url?page=2",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.code.tencent.com",
      "private-token": "abc123",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://git.code.tencent.com/api/v3/some-url?page=3",
  },
]
`;

exports[`util/http/tgit posts 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.code.tencent.com",
      "private-token": "abc123",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://git.code.tencent.com/api/v3/some-url",
  },
]
`;
